--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,19 @@ theory/s1/main.fls
 theory/s1/main.aux
 theory/s1/main.log
 theory/s1/main.toc
+
+events/2904/main.fdb_latexmk
+events/2904/main.fls
+events/2904/main.aux
+events/2904/main.log
+events/2904/main.nav
+events/2904/main.snm
+events/2904/main.xdv
+events/2904/main.out
+events/2904/main.toc
+
+theory/s2/main.fdb_latexmk
+theory/s2/main.fls
+theory/s2/main.aux
+theory/s2/main.log
+theory/s2/main.toc
